k8s-manifests/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  namespace: django-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
        - name: django-app
          image: localhost:32000/kub_dj:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          command: ["sh", "-c"]
          args:
            - "chmod +x /app/migrate.sh && /app/migrate.sh && /app/entrypoint.sh"
