k8s-manifests/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: django-k8s
spec:
  type: NodePort
  selector:
    app: django-app
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30007
