k8s-manifests/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
  namespace: django-k8s
spec:
  ports:
    - port: 5433
      targetPort: 5433
  selector:
    app: postgres-db
